--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             </div>
             <h1><i class="fab fa-github-alt"></i> GitHub Repo Gallery</h1>
             <section class="intro">
+                <!-- targeting as #1 global variable profileInfo -->
                 <div class="overview"></div>
             </section>
 
